--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/jest": "^29.5.12",
         "@types/mocha": "^10.0.6",
         "@types/node": "^20.3.2",
+        "@types/reflect-metadata": "^0.1.0",
         "jest": "^29.7.0",
         "nodemon": "^2.0.22",
         "ts-jest": "^29.1.2",
