--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,9 @@
     "strict": true, /* Enable all strict type-checking options. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
     "types": [
-      "reflect-metadata",
       "jest"
     ],
-    "typeRoots": [
-      "./types",
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./node_modules/@types"],
   },
   "exclude": [
     "node_modules",
@@ -26,7 +22,7 @@
     "**/*.test.ts"
   ],
   "include": [
-    "./src/**/*.tsx",
-    "./src/**/*.ts"
+    "./dev/**/*.tsx",
+    "./dev/**/*.ts"
   ]
 }
